WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116298
[BlackBerry] DumpRenderTreeSupport: fix build in setMockDeviceOrientation()
https://bugs.webkit.org/show_bug.cgi?id=116298
Summary
[BlackBerry] DumpRenderTreeSupport: fix build in setMockDeviceOrientation()
Alberto Garcia
Reported
2013-05-17 03:02:39 PDT
toDeviceOrientationClientMock() expects a DeviceOrientationClient* but we are passing a DeviceClient*
Attachments
Patch
(1.64 KB, patch)
2013-05-17 03:03 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-05-17 03:03:51 PDT
Created
attachment 202055
[details]
Patch
WebKit Commit Bot
Comment 2
2013-05-17 03:41:44 PDT
Comment on
attachment 202055
[details]
Patch Clearing flags on attachment: 202055 Committed
r150247
: <
http://trac.webkit.org/changeset/150247
>
WebKit Commit Bot
Comment 3
2013-05-17 03:41:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug