[BlackBerry] DumpRenderTreeSupport: fix build in setMockDeviceOrientation() https://bugs.webkit.org/show_bug.cgi?id=116298

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-05-17
Reviewed by Carlos Garcia Campos.

Pass the correct parameter to toDeviceOrientationClientMock()

* WebKitSupport/DumpRenderTreeSupport.cpp:
(DumpRenderTreeSupport::setMockDeviceOrientation):

Canonical link: https://commits.webkit.org/134669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150247 268f45cc-cd09-0410-ab3c-d52691b4dbfc